# latam-challenge-danielospina

./: .dockerignore  .gitignore  Dockerfile  Makefile  cloudbuil.yaml  docker-compose.yml  final_requirements.txt  pyproject.toml  requirements.txt  service.yaml
.github/workflows/: cd.yml  ci.yml
challenge/: api.py  exploration.ipynb  model.py  settings.py
challenge/db/: db_functions.py
challenge/redis/: redis_client.py
challenge/schemas/: templates.py
challenge/services/: redis_service.py  services.py  train_service.py
challenge/storage/: storage_functions.py
challenge/utils/: logger.py  preprocessor.py  utils.py
docs/: challenge.md
models/: model.pkl
tests/api/: test_api.py
